# polyfill-23

./: .clang-format  .gitignore  .tm_properties  CMakeLists.txt  CMakeSettings.json  test.cpp
.github/workflows/: cmake.yml
include/: CMakeLists.txt
include/hana23/: CMakeLists.txt  move_only_function.hpp  move_only_function.hpp.in  regenerate.cmake
include/hana23/templates/: move_only_function.in
include/hana23/utility/: move_only_function.hpp
